--- a/DataGridExample/MainWindow.xaml
+++ b/DataGridExample/MainWindow.xaml
@@ -7,14 +7,15 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="500" Width="525" Loaded="Window_Loaded">
     <Grid>
-        <Button Name="SaveButton" Click="Savebutton_Click" Margin="360,166,37,262" Content="Save"></Button>
-        <Button Name="LoadButton" Click="LoadButton_Click" Content="Load" Margin="360,213,37,222"></Button>
-        <DataGrid Name="datagrid2" Margin="28,31,174,287" IsReadOnly="True" />
-        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="100" Margin="370,46,0,0" VerticalAlignment="Top" Width="100"/>
-        <Button x:Name="LoadButton2" Content="To DB" Margin="206,275,197,116" Click="LoadButton2_Click"/>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="28,275,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="133"/>
-        <TextBox x:Name="textBox2" HorizontalAlignment="Left" Height="23" Margin="28,303,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="133"/>
-        <TextBox x:Name="textBox3" HorizontalAlignment="Left" Height="23" Margin="28,331,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="133"/>
-        <Label x:Name="label" Content="Wprowadz dane do DB:" HorizontalAlignment="Left" Margin="28,244,0,0" VerticalAlignment="Top" Width="162"/>
+        <Button Name="SaveButton" Click="Savebutton_Click" Margin="369,33,28,395" Content="Save"></Button>
+        <Button Name="LoadButton" Click="LoadButton_Click" Content="Load" Margin="387,191,10,244"></Button>
+        <DataGrid Name="datagrid2" Margin="28,17,282,368" IsReadOnly="True" />
+        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="85" Margin="240,17,0,0" VerticalAlignment="Top" Width="100"/>
+        <Button x:Name="LoadButton2" Content="To DB" Margin="177,140,226,251" Click="LoadButton2_Click"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="28,140,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="133"/>
+        <TextBox x:Name="textBox2" HorizontalAlignment="Left" Height="23" Margin="28,168,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="133"/>
+        <TextBox x:Name="textBox3" HorizontalAlignment="Left" Height="23" Margin="28,196,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="133"/>
+        <Label x:Name="label" Content="Wprowadz dane do DB:" HorizontalAlignment="Left" Margin="28,109,0,0" VerticalAlignment="Top" Width="162"/>
+        <DataGrid x:Name="datagrid3" Margin="10,231,10,10" IsReadOnly="True" />
     </Grid>
 </Window>
